--- a/lotus.css
+++ b/lotus.css
@@ -5,18 +5,32 @@
     box-sizing: border-box;
     font-family: 'Rubik',sans-serif;
 }
+body{
+    margin:0;
+    background: center;
+    text-align: center;
+    font-family: sans-serif;
+    color: #fff !important;
+    background:linear-gradient(#3e2c29,gold,#3e2c29) !important;
+    
+}
 .nav-logo{
-    width:50px;
-    height:50px;
+    width:90px;
+    height:70px;
+    padding: 0px;
 }
 .nav-item{
     font-weight: bold;
+    font-size:0.9rem;
 }
-.nav-item:hover{
-    border: 1px violet solid;
+.nav-link:hover{
+    background-color: #6c296f;
+    color: white !important;
+    border-radius: 18px;
 }
+
 .main{
-    background: url("https://res.cloudinary.com/digdliiab/image/upload/v1672665168/1211800_pw9fiu.jpg")no-repeat;
+    background: url("images/background.png")no-repeat;
     background-size: cover;
     height: 100vh;
     background-position:50% 50%;
@@ -44,6 +58,17 @@
 }
 .container{
     overflow: hidden;
+}
+.card img{
+    width:24%;
+    height: 40%;
+}
+.container h5{
+    margin-top: 2%;
+    font-size: 1rem;
+}
+.container p{
+    font-size: 0.8rem;
 }
 .container.text{
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -90,73 +115,65 @@
 }
 
 .imageries{
-    width:50px;
-    height:50px;
-    background:rgb(232, 227, 227);
+    width:10rem;
   
 }
 
 .imageries:hover{
     transform: scale(1.02);
-        box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75)inset;
+        /* box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75)inset;
         -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75)inset;
-        -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+        -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75); */
+}
+.jointing{
+    font-weight:bold;
 }
 
 .brick{
-    width:40vw;
-    height:44vh;
+    width:100%;
+    height:100%;
+    object-fit: contain;
 
 }
 .brick:hover{
-    transform: scale(1.02);
-        box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75)inset;
+
+        /* box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75)inset;
         -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75)inset;
-        -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75)inset;
+        -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75)inset; */
 }
 .ready{
-    width:40vw;
-    height:36vh;
+    width:100%;
+    height:100%;
+    object-fit: contain;
 
 }
-.ready:hover{
-    transform: scale(1.02);
-        box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75)inset;
-        -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75)inset;
-        -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75)inset;
-}
+
 .tile{
-    width:40vw;
-    height:53vh;
+    width:80%;
+    margin: 8% 0% 0% 8%;
+}
 
-}
-.tile:hover{
-    transform: scale(1.02);
-        box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75)inset;
-        -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75)inset;
-        -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75)inset;
-}
 .wall{
-    width:40vw;
-    height:49vh;
+    width:80%;
+    margin-left: 10%;
+    height:100%;
+    object-fit: contain;
 
 }
-.wall:hover{
-    transform: scale(1.02);
-        box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75)inset;
-        -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75)inset;
-        -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75)inset;
-}
+
 #happy{
-    background-color: rgb(241, 239, 239);
+    background-color: white;
 }
 #happ{
     background-color: rgb(190, 189, 189);
+    
 }
 .o{
 font-weight: 300;
 font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-font-size: 50px;
+font-size: 35px;
+line-height: 1em;
+float: left;
 }
 .mainn{
     background:url("https://res.cloudinary.com/digdliiab/image/upload/v1672676044/2256b240528fe695ef7915ef96498152_tu06cw.jpg")no-repeat;
@@ -172,14 +189,7 @@ font-size: 50px;
     justify-content: center;
     margin-left: 150px;
 }
-.lion{
-    width:50px;
-    height:40px;
-    justify-content: center;
-    margin-left:480px;
-    margin-top: 10px;
-    margin-right: 0px;
-}
+
 .lain{
     background:url("https://res.cloudinary.com/digdliiab/image/upload/v1672679225/plum-abstract-texture-black-vignette-260nw-136742354_fo9ojm.jpg")no-repeat;
     background-size: cover;
@@ -188,17 +198,90 @@ font-size: 50px;
     width:100%;
     
 }
-.lionn{
-    width:50px;
-    height:40px;
-    justify-content: center;
-    margin-top: 10px;
-    margin-left: 0px;
+
+
+@media (max-width:992px){
+    .card img{
+        width:45%
+    }
+    .card p{
+        font-size: 0.6rem;
+    }
 }
-.ele{
-    justify-content: center;
-    margin-left: 400px;
+@media (max-width:576px){
+    .card img{
+        width:30%
+    }
+    .card p{
+        font-size: 1rem;
+    }
 }
-.ele:hover{
-    transition: 2s linear;
+.rotate{
+    position:relative;
+    width:100px;
+    margin:0px auto 0 auto;
+    perspective: 1000;
+    height: 50vh;
+    margin-top: 0px;
+
+    
+}
+.carousel{
+    position: absolute;
+    width:100%;
+    height:100%;
+    transform-style:preserve-3d;
+    animation:rotate360 60s infinite forwards linear;
+    margin-top: 0px;
+}
+.image{
+    position:absolute;
+    width:300px;
+    height:250px;
+    top:20px;
+    left:10px;
+    right:10px;
+    background-size: cover;
+    display: flex;
+
+}
+
+@keyframes rotate360{
+    from{
+        transform:rotateY(0deg);
+    }
+    to{
+        transform:rotateY(-360deg);
+    }
+}
+.image:nth-child(1){
+    
+    background-image: url("images/7.png");
+    transform: rotateY(0deg) translateZ(430px);
+}
+.image:nth-child(2){
+    background-image: url("images/1.png");
+    transform: rotateY(40deg) translateZ(430px);
+}
+.image:nth-child(3){
+    background-image:url("images/3.png");
+    transform: rotateY(80deg) translateZ(430px);
+}
+.image:nth-child(4){
+    background-image: url("images/2.png");
+    transform: rotateY(120deg) translateZ(430px);
+}
+ /*.image:nth-child(5){
+    background-image:url("images/elephant1.png");
+    transform: rotateY(160deg) translateZ(430px);
+}
+.image:nth-child(6){
+    background-image:url("images/.png");
+    transform: rotateY(160deg) translateZ(430px);
+}*/
+
+
+.table td, .table th{
+    padding:1% !important;
+    font-size:0.8rem !important
 }
